MINOR: Using constructor